# project2_Samoylov_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  utils.py
