[tool.poetry]
name = "project2-samoylov-m25-555"
version = "0.1.0"
description = ""
authors = ["IlyaSamoylov <ilya.samoylov2004@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.scripts]
project = "src.primitive_db.main:main"

 
[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []