[tool.poetry]
name = "project2-samoylov-m25-555"
version = "0.1.0"
description = "Консольное приложение, имитирующее работу базы данных на json"
authors = ["IlyaSamoylov <ilya.samoylov2004@mail.ru>"]
readme = "README.md"
packages = [
    { include = "primitive_db", from = "src" },
]


[tool.poetry.scripts]
database = "src.primitive_db.main:main"

 
[tool.poetry.dependencies]
python = "^3.13"
prettytable = "^3.16.0"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
